stream_settings: Fix spacing issue for user deactivated icon.
Previously, the deactivated user icon did not have sufficient
spacing around it, which was an issue. This commit addresses that
problem by introducing a new CSS class called pill-deactivated.

--- a/web/styles/input_pill.css
+++ b/web/styles/input_pill.css
@@ -244,6 +244,10 @@
                 max-width: none;
             }
 
+            > .pill-deactivated {
+                padding-right: 3px;
+            }
+
             > .my_user_status {
                 margin-right: 2px;
             }
